--- a/app/view/templates/haml/semester.html.haml
+++ b/app/view/templates/haml/semester.html.haml
@@ -12,17 +12,17 @@
         %h1 Semester #{semester.id}
         - topics.each do |topic|
           - unless topic.competencies.empty?
-            %h2 #{topic.title}
+            %h2 #{topic.id} #{topic.title}
             %table(class="table")
               - topic.competencies.each do |competency|
                 - unless competency.competency_levels_by_semester(semester).empty?
                   %tr
-                    %th(colspan="4" class="table-dark") #{competency.title}
+                    %th(colspan="4" class="_#{topic.id}")#{competency.id} #{competency.title}
                   %tr
                     %th(class="col-1") Level
                     %th(class="col-5") Ziele
                     %th(class="col-5") Instrumente
-                    %th(class="col-1") Datum
+                    %th(class="col-1") Zeitraum
                     - competency.competency_levels_by_semester(semester).each do |level|
                       %tr
                         %td #{level.level}
@@ -34,9 +34,6 @@
                           %ul
                             - level.instruments.each do |instrument|
                               %li #{instrument}
-                        %td
-                          von: #{level.calendar_week_from}
-                          %br/
-                          bis: #{level.calendar_week_to}
+                        %td KW: #{level.calendar_week_from} - #{level.calendar_week_to}
         %p Erstellt am: #{date}
       %div(class="col-1")
