--- a/app/view/templates/haml/semester.html.haml
+++ b/app/view/templates/haml/semester.html.haml
@@ -1,39 +1,32 @@
-!!! 5
-%html
-  %head
-    %title Semester #{semester.id}
-    %link(rel="stylesheet" type="text/css" href="css/bootstrap.min.css")
-    %link(rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css")
-    %link(rel="stylesheet" type="text/css" href="css/style.css")
-  %body
-    %div(class="row")
-      %div(class="col-1")
-      %div(class="col-10")
-        %h1 Semester #{semester.id}
-        - topics.each do |topic|
-          - unless topic.competencies.empty?
-            %h2 #{topic.id} #{topic.title}
-            %table(class="table")
-              - topic.competencies.each do |competency|
-                - unless competency.competency_levels_by_semester(semester).empty?
+= navigation
+%div(class="row")
+  %div(class="col-1")
+  %div(class="col-10")
+    %h1 Semester #{semester.id}
+    - topics.each do |topic|
+      - unless topic.competencies.empty?
+        %h2 #{topic.id} #{topic.title}
+        %table(class="table")
+          - topic.competencies.each do |competency|
+            - unless competency.competency_levels_by_semester(semester).empty?
+              %tr
+                %th(colspan="4" class="_#{topic.id}")#{competency.id} #{competency.title}
+              %tr
+                %th(class="col-1") Level
+                %th(class="col-5") Ziele
+                %th(class="col-5") Instrumente
+                %th(class="col-1") Zeitraum
+                - competency.competency_levels_by_semester(semester).each do |level|
                   %tr
-                    %th(colspan="4" class="_#{topic.id}")#{competency.id} #{competency.title}
-                  %tr
-                    %th(class="col-1") Level
-                    %th(class="col-5") Ziele
-                    %th(class="col-5") Instrumente
-                    %th(class="col-1") Zeitraum
-                    - competency.competency_levels_by_semester(semester).each do |level|
-                      %tr
-                        %td #{level.level}
-                        %td
-                          %ul
-                            - level.goals.each do |goal|
-                              %li #{goal}
-                        %td
-                          %ul
-                            - level.instruments.each do |instrument|
-                              %li #{instrument}
-                        %td KW: #{level.calendar_week_from} - #{level.calendar_week_to}
-        %p Erstellt am: #{date}
-      %div(class="col-1")
+                    %td #{level.level}
+                    %td
+                      %ul
+                        - level.goals.each do |goal|
+                          %li #{goal}
+                    %td
+                      %ul
+                        - level.instruments.each do |instrument|
+                          %li=level.link_text(instrument: instrument)
+                    %td KW: #{level.calendar_week_from} - #{level.calendar_week_to}
+    %p Erstellt am: #{date}
+  %div(class="col-1")
